--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shvatz</title>
     <link rel="stylesheet" href="style/style.css">
+   <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
@@ -27,18 +28,18 @@
     </header>
 
     <main class="home">
-            <section id="content-home">
-                <div id="text-home">
+        <section id="content-home">
+            <div id="text-home">
                 <h1>Fachadas com propósito</h1>
                 <p>
-Cada linha, luz e acabamento foi pensado para valorizar seu imóvel, destacar sua identidade e transformar a primeira impressão em admiração.  Mais que estética, entregamos presença e uma experiência visual que permanece na memória.
+                    Cada linha, luz e acabamento foi pensado para valorizar seu imóvel, destacar sua identidade e
+                    transformar a primeira impressão em admiração. Mais que estética, entregamos presença e uma
+                    experiência visual que permanece na memória.
 
-</p>
+                </p>
 
-                 </div>
-            </section>
-       
-
+            </div>
+        </section>
     </main>
 </body>
 
